# PyStockBot

./: .gitignore  API.py  CLAUDE.md  LICENSE  README.md  SHIZEL.json  btcdata.csv  cleannb.py  data.db  main.py  pyproject.toml  stock_prediction.ipynb  stock_prediction_demo.ipynb  stock_training.ipynb  stock_training1.ipynb  stock_training2_xgboost.ipynb
.cursor/rules/: rules.mdc
.github/: copilot-instructions.md
crypto/data/: data.parquet  dividends.parquet  events.parquet  predicted.parquet  splits.parquet  stock_data.parquet
crypto/model/: xgboost_model.json  xgboost_model.pkl
crypto/src/: analyze_dataset.ipynb  analyze_model.ipynb  prepare_dataset.ipynb  pull_data.ipynb  train_model.ipynb  train_model_classification.ipynb
data/: dataset.parquet  events.parquet  stock_data.parquet
db/: Dockerfile  README.md  postgresql-compose.yml  test-db.sh
db/init/: schema.sql  timescale.sql
frontend/: .env.example
frontend/app/: page.tsx
frontend/hooks/: use-user-assets.ts
frontend/scripts/: migrate.ts
ml-pipeline/pipelines/: __init__.py  config.py  data_ingestion.py  feature_engineering.py  main.py  technical_indicators.py
old/: API.py  Bitcoin_Historical_Price_Volume.csv  stock_training.ipynb  stock_training_testing.ipynb
src/: analyize_model.ipynb  analyze_dataset.ipynb  analyze_model.ipynb  prepare_dataset.ipynb  pull_data.ipynb  pull_dividends_splits.ipynb  pull_events.ipynb  train_model.ipynb  train_model_classification.ipynb
stonks/data/: predicted.parquet
stonks/model/: xgboost_model.json  xgboost_model.pkl
ui/: README.md
(+42 files in other folders)
