[project]
name = "pystockbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dask>=2024.11.2",
    "datacompy>=0.14.4",
    "ipykernel>=6.29.5",
    "keras>=3.6.0",
    "pandas-datareader>=0.10.0",
    "pandas>=2.2.3",
    "scikit-learn>=1.5.2",
    "seaborn>=0.13.2",
    "xgboost>=2.1.2",
    "yfinance>=0.2.50",
    "numpy>=2.1.2",
    "matplotlib>=3.9.2",
    "autopep8>=2.3.2",
    "mplfinance>=0.12.10b0",
    "plotly>=6.0.0",
    "nbformat>=5.10.4",
    "ipydatagrid>=1.4.0",
    "nbconvert>=7.16.6",
]

# Optional dependencies
# tensorflow pyarrow dash


[tool.autopep8]
# Set line length to 180 characters
max_line_length = 120
